--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,14 @@
     <div class='container-fluid'>
       <div class='row'>
 	<div class='col-md-12'>
+	  <%= render 'layouts/header' %>
+	</div>
+      </div>
+      <div class='row'>
+	<p id="notice"><%= notice %></p>
+      </div>
+      <div class='row'>
+	<div class='col-md-12'>
 	  <%= yield %>
 	</div>
       </div>
