--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,11 @@
     <h1>Constipation Logs</h1>
 
     <% if dev_signed_in? %>
-      <%= link_to 'New Log', new_log_path, class: 'btn btn-default' %>
-      <%= link_to destroy_dev_session_path, class: 'btn btn-default', method: :delete do %>
+      <%= link_to 'New Log', new_log_path, class: 'btn btn-default right' %>
+      <%= link_to 'Logs', logs_path, class: 'btn btn-default right' %>
+      <%= link_to destroy_dev_session_path, class: 'btn btn-default right', method: :delete do %>
 	Sign Out
       <% end %>
     <% else %>
-      <%= link_to 'Sign In', new_dev_session_path, class: 'btn btn-default' %>
+      <%= link_to 'Sign In', new_dev_session_path, class: 'btn btn-default right' %>
     <% end %>
