--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,9 @@
 	</div>
       </div>
       <div class='row'>
-	<p id="notice"><%= notice %></p>
+	<div class='col-md-11'>
+	  <p id="notice"><%= notice %></p>
+	</div>
       </div>
       <div class='row'>
 	<div class='col-md-12'>
