--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,10 +1,26 @@
 @import 'bootstrap';
 
+h1 {
+    padding: 5px;
+}
+
 .right {
     float: right;
 }
 
+.bottom-shadow {
+    box-shadow: 0 4px 4px -2px rgba(1,1,1,0.6);
+}
+
+.site-title {
+    @extend .bottom-shadow;
+    margin: 15px 0;
+    border-radius: 3px;
+}
+
 .title {
+    @extend .bottom-shadow;
+    margin: 15px 0;
     &:hover {
 	background: green;
 	color: white;
