--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<h1 class='site-title'>Constipation Logs</h1>
+<%= image_tag ('icon1.png'), class: 'logo' %><h1 class='site-title'>Constipation Logs</h1>
 
 <% if dev_signed_in? %>
   <%= link_to 'New Log', new_log_path, class: 'btn btn-default right' %>
