--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -33,10 +33,9 @@ h1 {
     color: rgba(0,0,0,0.8);
     padding: 15px;
     a {
-//	color: rgba(0,0,0,0.8);
-	//	&:hover {
+	color: rgba(0,0,0,0.8);
 	:hover {
-	    //    color: white;
+	    color: white;
 	    background: green;
 	    text-decoration: none;
 	}
