--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -41,8 +41,11 @@ h1 {
 	}
     }
     &:hover {
-//	background: green;
-//	color: white;
+	background: green;
+	color: white;
+	a {
+	    color: white;
+	}
     }
 }
 
