--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -53,3 +53,11 @@ h1 {
     width: 60px;
     border-radius: 50%;
 }
+
+#errors_full_text {
+    padding: 10px;
+    margin-bottom: 10px;
+    h2 {
+	font-size: 18px;
+    }
+}
