--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <%= javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/typeahead.js/0.9.3/typeahead.min.js' %>
     <%= csrf_meta_tags %>
   </head>
-  <body>
+  <body data-no-turbolink>
 
     <div class='container-fluid'>
 
